Refactor error response structure