@@ -5,6 +5,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -12,9 +13,10 @@ public class CustomCorsConfig  implements CorsConfigurationSource {
   @Override
   public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
     CorsConfiguration config = new CorsConfiguration();
-    config.setAllowedOrigins(List.of("http://localhost:5173"));
-    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
-    config.setAllowedHeaders(List.of("*"));
+    config.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+    config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+    config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+    config.setExposedHeaders(Arrays.asList("Authorization"));
     config.setAllowCredentials(true);
     return config;
   }
